--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -10,6 +10,15 @@
   <meta name="keywords" content="Mira Creations, Edmonton event decor, family business wedding decor, jewelry Edmonton, South Asian weddings, Punjabi decor, cultural event styling" />
   <link rel="canonical" href="https://miradecorandjewellery.com/AboutUs/" />
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G51T75TMJY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-G51T75TMJY');
+  </script>
+
   <!-- Open Graph -->
   <meta property="og:title" content="About Mira Creations | Edmonton Event Decor & Jewelry" />
   <meta property="og:description" content="Family-owned wedding and event decor company in Edmonton. Discover how Mira Creations started and what makes our team unique." />
