--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <!-- WHY US SECTION -->
 <section id="why-us" class="why-us-section" role="region" aria-label="Why choose Mira Creations for your event">
   <div class="why-us-content">
-    <h2 class="specialize-title" role="heading" aria-level="2">Why Choose Us</h2>
+    <h2 class="specialize-title" role="heading" aria-level="2">Why Choose Mira Creations</h2>
     <p>
       At Mira Creations, we specialize in bringing your vision to life with thoughtfully curated <strong>event decor and jewellery</strong>. Whether you're planning a wedding, cultural celebration, or special event in <strong>Edmonton</strong> or the surrounding area, we provide personalized service, premium craftsmanship, and timeless designs that reflect your unique style.
     </p>
