--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       </div>
     </div>
 
-<a href="/Gallery/" title="Mira Creations event decor Gallery in Edmonton">View our Event Decor Gallery</a>
+<a href="Gallery/" title="Mira Creations event decor Gallery in Edmonton" class="specialize-button">View our Event Decor Gallery</a>
   </div>
 </section>
 
