--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="robots" content="index, follow">
 
-  <title>Event Decor & Jewelry in Edmonton | Mira Creations</title>
+  <title>Mira Creations | Event Decor, Jewellery & Indian Wedding Decorations in Edmonton</title>
   <meta name="description" content="Mira Creations offers luxury event decor and handcrafted jewellery for weddings, cultural celebrations, and special events in Edmonton and surrounding areas." />
   <meta name="keywords" content="Mira Creations, event decor Edmonton, wedding decor Edmonton, Indian wedding decoration, Indian wedding decoration Edmonton, Edmonton jewellery, stage decoration, cultural event decor, bridal accessories Edmonton" />
   <link rel="canonical" href="https://miradecorandjewellery.com/" />
@@ -212,6 +212,8 @@
 <section id="services" class="specialize-section">
   <div class="specialize-content">
     <h2 class="specialize-title">Mira Creations Specializes In</h2>
+    <p class="services-intro">From Indian wedding decor to bridal jewellery and backdrops, Mira Creations offers full-service wedding and event decor solutions in Edmonton and nearby areas.</p>
+
 
     <div class="specialize-cards">
       <div class="card" 
