--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
       <input type="email" name="email" placeholder="Your Email" required />
       <input type="tel" name="phone" placeholder="Your Phone Number" required />
       <textarea name="message" placeholder="Tell us about your event or jewelry needs" required></textarea>
-      <button type="submit">Send Message</button>
+      <button type="submit">Send Mira Creations a Message</button>
     </form>
     
   </div>
