--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Event Decor & Jewelry in Edmonton | Mira Creations" />
   <meta property="og:description" content="Luxury wedding and event decor with elegant jewellery collections for your special day in Edmonton." />
-  <meta property="og:image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
+  <meta property="og:image" content="https://miradecorandjewellery.com/images/Logo-Purple.jpg" />
   <meta property="og:url" content="https://miradecorandjewellery.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="en_CA" />
@@ -32,7 +32,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Event Decor & Jewelry in Edmonton | Mira Creations" />
   <meta name="twitter:description" content="Event decor and jewellery for weddings and cultural events in Edmonton." />
-  <meta name="twitter:image" content="https://miradecorandjewellery.com/images/Logo-Purple.png" />
+  <meta name="twitter:image" content="https://miradecorandjewellery.com/images/Logo-Purple.jpg" />
 
   <!-- Favicon -->
   <link rel="icon" href="/images/Logo-Purple.jpg" type="image/jpeg" />
@@ -43,7 +43,7 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Mira Creations",
-    "image": "https://miradecorandjewellery.com/images/Logo-Purple.png",
+    "image": "https://miradecorandjewellery.com/images/Logo-Purple.jpg",
     "@id": "https://miradecorandjewellery.com",
     "url": "https://miradecorandjewellery.com",
     "telephone": "+1-587-709-0058",
