--- a/index.html
+++ b/index.html
@@ -235,49 +235,61 @@
   <div class="specialize-content">
     <h2 class="specialize-title">Mira Creations Specializes In</h2>
 
-    <div class="specialize-cards">
-      <div class="card" 
-           style="background-image: url('images/Card1.jpg');" 
-           aria-label="Wedding decor Edmonton by Mira Creations - Stage and Backdrop Design">
-        <span role="heading" aria-level="3">Stage & Backdrop Design</span>
-        <img src="images/Card1.jpg" alt="Indian wedding stage and backdrop decor in Edmonton" class="visually-hidden" />
-      </div>
+   <div class="specialize-cards">
 
-      <div class="card" 
-           style="background-image: url('images/Card2.jpg');" 
-           aria-label="Event decor Edmonton by Mira Creations - Event Accessory Packages">
-        <span role="heading" aria-level="3">Event Accessory Packages</span>
-        <img src="images/Card2.jpg" alt="Cultural and Event Accessory Packages in Edmonton" class="visually-hidden" />
+  <div class="card">
+    <picture>
+      <source srcset="images/Card1.webp" type="image/webp">
+      <source srcset="images/Card1.jpg" type="image/jpeg">
+      <img src="images/Card1.jpg" alt="Indian wedding stage and backdrop decor in Edmonton" loading="lazy">
+    </picture>
+    <span class="card-title">Stage & Backdrop Design</span>
+  </div>
 
-      </div>
+  <div class="card">
+    <picture>
+      <source srcset="images/Card2.webp" type="image/webp">
+      <source srcset="images/Card2.jpg" type="image/jpeg">
+      <img src="images/Card2.jpg" alt="Cultural and event accessory packages in Edmonton" loading="lazy">
+    </picture>
+    <span class="card-title">Event Accessory Packages</span>
+  </div>
 
-      <div class="card" 
-           style="background-image: url('images/Card3.jpg');" 
-           aria-label="Indian Clothing Edmonton by Mira Creations - Indian Suits and Indian Kurtas">
-        <span role="heading" aria-level="3">Suits & Kurtas</span>
-        <img src="images/Card3.jpg" alt="Indian Suits and Kurtas in Edmonton" class="visually-hidden" />
-      </div>
+  <div class="card">
+    <picture>
+      <source srcset="images/Card3.webp" type="image/webp">
+      <source srcset="images/Card3.jpg" type="image/jpeg">
+      <img src="images/Card3.jpg" alt="Indian suits and kurtas in Edmonton" loading="lazy">
+    </picture>
+    <span class="card-title">Suits & Kurtas</span>
+  </div>
 
-      <div class="card" 
-           style="background-image: url('images/Card4.jpg');" 
-           aria-label="Event decor Edmonton by Mira Creations - Baby Shower Decor and Birthday Decor">
-        <span role="heading" aria-level="3">Baby Showers and Birthdays</span>
-        <img src="images/Card4.jpg" alt="Baby Shower and Birthday Event Decor in Edmonton" class="visually-hidden" />
-      </div>
+  <div class="card">
+    <picture>
+      <source srcset="images/Card4.webp" type="image/webp">
+      <source srcset="images/Card4.jpg" type="image/jpeg">
+      <img src="images/Card4.jpg" alt="Baby shower and birthday event decor in Edmonton" loading="lazy">
+    </picture>
+    <span class="card-title">Baby Showers and Birthdays</span>
+  </div>
 
-      <div class="card" 
-           style="background-image: url('images/Card5.jpg');" 
-           aria-label="Indian Jewellery Edmonton by Mira Creations - Indian Jewellery">
-        <span role="heading" aria-level="3">Jewellery Sales</span>
-        <img src="images/Card5.jpg" alt="Indian Jewellery for Events" class="visually-hidden" />
-      </div>
+  <div class="card">
+    <picture>
+      <source srcset="images/Card5.webp" type="image/webp">
+      <source srcset="images/Card5.jpg" type="image/jpeg">
+      <img src="images/Card5.jpg" alt="Indian bridal jewellery and accessories in Edmonton" loading="lazy">
+    </picture>
+    <span class="card-title">Jewellery Sales</span>
+  </div>
 
-      <div class="card" 
-           style="background-image: url('images/Card6.jpg');" 
-           aria-label="Event decor Edmonton by Mira Creations - Table and Centerpiece Styling">
-        <span role="heading" aria-level="3">Table & Centrepiece Styling</span>
-        <img src="images/Card6.jpg" alt="Table and Centerpiece for Events in Edmonton" class="visually-hidden" />
-      </div>
+  <div class="card">
+    <picture>
+      <source srcset="images/Card6.webp" type="image/webp">
+      <source srcset="images/Card6.jpg" type="image/jpeg">
+      <img src="images/Card6.jpg" alt="Table styling and centerpieces for Edmonton events" loading="lazy">
+    </picture>
+    <span class="card-title">Table & Centrepiece Styling</span>
+  </div>
     </div>
 
 <p class="services-intro">From Indian wedding decor to bridal jewellery and backdrops, Mira Creations offers full-service wedding and event decor solutions in Edmonton and nearby areas.</p>
