--- a/index.html
+++ b/index.html
@@ -166,20 +166,20 @@
   <div class="welcome-spacer"></div>
   
   <div class="welcome-content">
-    <div class="logo-container welcome-logo-container">
-      <img 
-        src="images/Logo-Purple.png" 
-        class="welcome-logo purple-logo" 
-        alt="Mira Creations Purple Logo for Weddings and Event Decor in Edmonton" 
-        loading="lazy" 
-        aria-hidden="true" />
-      <img 
-        src="images/Logo-Black.png" 
-        class="welcome-logo black-logo" 
-        alt="Mira Creations Logo for Weddings and Event Decor in Edmonton" 
-        loading="lazy" 
-        aria-hidden="true" />
-    </div>
+  <div class="logo-container welcome-logo-container">
+
+  <picture class="welcome-logo purple-logo">
+    <source srcset="images/Logo-Purple.webp" type="image/webp">
+    <source srcset="images/Logo-Purple.png" type="image/png">
+    <img src="images/Logo-Purple.png" alt="Mira Creations Purple Logo for Weddings and Event Decor in Edmonton" loading="lazy">
+  </picture>
+
+  <picture class="welcome-logo black-logo" aria-hidden="true">
+    <source srcset="images/Logo-Black.webp" type="image/webp">
+    <source srcset="images/Logo-Black.png" type="image/png">
+    <img src="images/Logo-Black.png" alt="" loading="lazy">
+  </picture>
+  </div>
 
     <h1 class="welcome-title">Mira Creations</h1>
     <h2 class="welcome-subtitle">Your trusted source for Premium Event Decor and Jewellery</h2>
