--- a/index.html
+++ b/index.html
@@ -199,11 +199,13 @@
 <!-- DIVIDER BETWEEN WELCOME & WHY US -->
 <div class="section-divider" role="presentation" aria-hidden="true">
   <div class="specialize-line"></div>
-  <img src="images/Logo-Black.png" 
-       alt="Mira Creations Logo for Weddings and Event Decor in Edmonton" 
-       class="specialize-logo"
-       loading="lazy" 
-       aria-hidden="true" />
+
+  <picture class="specialize-logo">
+    <source srcset="images/Logo-Black.webp" type="image/webp">
+    <source srcset="images/Logo-Black.png" type="image/png">
+    <img src="images/Logo-Black.png" alt="" loading="lazy" aria-hidden="true">
+  </picture>
+
   <div class="specialize-line"></div>
 </div>
 
@@ -223,11 +225,13 @@
 <!-- DIVIDER BETWEEN WHY US & SERVICES -->
 <div class="section-divider" role="presentation" aria-hidden="true">
   <div class="specialize-line"></div>
-  <img src="images/Logo-Black.png" 
-       alt="Mira Creations Logo for Weddings and Event Decor in Edmonton" 
-       class="specialize-logo"
-       loading="lazy" 
-       aria-hidden="true" />
+
+  <picture class="specialize-logo">
+    <source srcset="images/Logo-Black.webp" type="image/webp">
+    <source srcset="images/Logo-Black.png" type="image/png">
+    <img src="images/Logo-Black.png" alt="" loading="lazy" aria-hidden="true">
+  </picture>
+
   <div class="specialize-line"></div>
 </div>
 
@@ -302,11 +306,13 @@
 <!-- DIVIDER BETWEEN SERVICES & CONTACT -->
 <div class="section-divider" role="presentation" aria-hidden="true">
   <div class="specialize-line"></div>
-  <img src="images/Logo-Black.png" 
-       alt="Mira Creations Logo for Weddings and Event Decor in Edmonton" 
-       class="specialize-logo"
-       loading="lazy" 
-       aria-hidden="true" />
+
+  <picture class="specialize-logo">
+    <source srcset="images/Logo-Black.webp" type="image/webp">
+    <source srcset="images/Logo-Black.png" type="image/png">
+    <img src="images/Logo-Black.png" alt="" loading="lazy" aria-hidden="true">
+  </picture>
+
   <div class="specialize-line"></div>
 </div>
 
