--- a/index.html
+++ b/index.html
@@ -360,12 +360,11 @@
   <!-- Label + Arrow inside their own wrapper -->
   <div class="contact-arrow-wrapper" aria-hidden="true">
     <div class="contact-label-over-arrow">Contact Information</div>
-    <img 
-      src="images/arrow.png" 
-      class="contact-arrow-image" 
-      alt="Arrow pointing to contact tab"
-      loading="lazy"
-      aria-hidden="true" />
+   <picture class="contact-arrow-image" aria-hidden="true">
+  <source srcset="images/arrow.webp" type="image/webp">
+  <source srcset="images/arrow.png" type="image/png">
+  <img src="images/arrow.png" alt="Arrow pointing to contact tab" loading="lazy">
+</picture>
   </div>
 
   <!-- The yellow clickable tab (decorative only) -->
