--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Mira Creations | Event Decor, Jewellery & Indian Wedding Decorations in Edmonton</title>
   <meta name="description" content="Mira Creations offers luxury event decor and handcrafted jewellery for weddings, cultural celebrations, and special events in Edmonton and surrounding areas." />
   <meta name="keywords" content="Mira Creations, event decor Edmonton, wedding decor Edmonton, Indian wedding decoration, Indian wedding decoration Edmonton, Edmonton jewellery, stage decoration, cultural event decor, bridal accessories Edmonton" />
-  <link rel="canonical" href="https://www.miradecorandjewellery.com" />
+  <link rel="canonical" href="https://www.miradecorandjewellery.com/" />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G51T75TMJY"></script>
@@ -128,7 +128,7 @@
   <picture class="black-logo welcome-logo" aria-hidden="true">
     <source srcset="images/Logo-Black.webp" type="image/webp">
     <source srcset="images/Logo-Black.png" type="image/png">
-    <img src="images/Logo-Black.png" alt="" loading="lazy">
+    <img src="images/Logo-Black.png" alt="Mira Creations logo" loading="lazy">
   </picture>
     </div>
     
@@ -177,7 +177,7 @@
   <picture class="welcome-logo black-logo" aria-hidden="true">
     <source srcset="images/Logo-Black.webp" type="image/webp">
     <source srcset="images/Logo-Black.png" type="image/png">
-    <img src="images/Logo-Black.png" alt="" loading="lazy">
+    <img src="images/Logo-Black.png" alt="Mira Creations logo" loading="lazy">
   </picture>
   </div>
 
@@ -203,7 +203,7 @@
   <picture class="specialize-logo">
     <source srcset="images/Logo-Black.webp" type="image/webp">
     <source srcset="images/Logo-Black.png" type="image/png">
-    <img src="images/Logo-Black.png" alt="" loading="lazy" aria-hidden="true">
+    <img src="images/Logo-Black.png" alt="Mira Creations logo" loading="lazy" aria-hidden="true">
   </picture>
 
   <div class="specialize-line"></div>
@@ -229,7 +229,7 @@
   <picture class="specialize-logo">
     <source srcset="images/Logo-Black.webp" type="image/webp">
     <source srcset="images/Logo-Black.png" type="image/png">
-    <img src="images/Logo-Black.png" alt="" loading="lazy" aria-hidden="true">
+    <img src="images/Logo-Black.png" alt="Mira Creations logo" loading="lazy" aria-hidden="true">
   </picture>
 
   <div class="specialize-line"></div>
@@ -310,7 +310,7 @@
   <picture class="specialize-logo">
     <source srcset="images/Logo-Black.webp" type="image/webp">
     <source srcset="images/Logo-Black.png" type="image/png">
-    <img src="images/Logo-Black.png" alt="" loading="lazy" aria-hidden="true">
+    <img src="images/Logo-Black.png" alt="Mira Creations logo" loading="lazy" aria-hidden="true">
   </picture>
 
   <div class="specialize-line"></div>
