--- a/ContactUs/index.html
+++ b/ContactUs/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mira Creations – Event Decor and Jewellery in Edmonton | Contact Us </title>
+  <title>Mira Creations | Event Decor, Jewellery & Indian Wedding Decorations in Edmonton</title>
 
   <meta name="description" content="Get in touch with Mira Creations for custom event decor, jewellery, and wedding styling in Edmonton. Contact us for a free quote or consultation." />
   <meta name="robots" content="index, follow" />
