--- a/ContactUs/index.html
+++ b/ContactUs/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mira Creations | Event Decor, Jewellery & Indian Wedding Decorations in Edmonton</title>
-
-  <meta name="description" content="Get in touch with Mira Creations for custom event decor, jewellery, and wedding styling in Edmonton. Contact us for a free quote or consultation." />
+ 
+   <title>Mira Creations | Event Decor, Jewellery & Indian Wedding Decorations in Edmonton</title>
+  <meta name="description" content="Mira Creations offers luxury event decor and handcrafted jewellery for weddings, cultural celebrations, and special events in Edmonton and surrounding areas." />
+  <meta name="keywords" content="Mira Creations, event decor Edmonton, wedding decor Edmonton, Indian wedding decoration, Indian wedding decoration Edmonton, Edmonton jewellery, stage decoration, cultural event decor, bridal accessories Edmonton" />
   <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://miradecorandjewellery.com/ContactUs/" />
+  <link rel="canonical" href="https://miradecorandjewellery.com/ContactUs" />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G51T75TMJY"></script>
