--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Mira Creations | Event Decor, Jewellery & Indian Wedding Decorations in Edmonton</title>
   <meta name="description" content="Mira Creations offers luxury event decor and handcrafted jewellery for weddings, cultural celebrations, and special events in Edmonton and surrounding areas." />
   <meta name="keywords" content="Mira Creations, event decor Edmonton, wedding decor Edmonton, Indian wedding decoration, Indian wedding decoration Edmonton, Edmonton jewellery, stage decoration, cultural event decor, bridal accessories Edmonton" />
+  <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://www.miradecorandjewellery.com/" />
 
   <!-- Google tag (gtag.js) -->
