--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -189,15 +189,15 @@
     <div class="logo-container header-logo-container">
 
   <picture class="purple-logo welcome-logo">
-    <source srcset="images/Logo-Purple.webp" type="image/webp">
-    <source srcset="images/Logo-Purple.png" type="image/png">
-    <img src="images/Logo-Purple.png" alt="Mira Creations logo - Event Decor and Jewellery in Edmonton" loading="lazy">
+    <source srcset="/images/Logo-Purple.webp" type="image/webp">
+    <source srcset="/images/Logo-Purple.png" type="image/png">
+    <img src="/images/Logo-Purple.png" alt="Mira Creations logo - Event Decor and Jewellery in Edmonton" loading="lazy">
   </picture>
 
   <picture class="black-logo welcome-logo" aria-hidden="true">
-    <source srcset="images/Logo-Black.webp" type="image/webp">
-    <source srcset="images/Logo-Black.png" type="image/png">
-    <img src="images/Logo-Black.png" alt="" loading="lazy">
+    <source srcset="/images/Logo-Black.webp" type="image/webp">
+    <source srcset="/images/Logo-Black.png" type="image/png">
+    <img src="/images/Logo-Black.png" alt="" loading="lazy">
   </picture>
     </div>
     
@@ -257,9 +257,9 @@
   <div class="specialize-line"></div>
 
   <picture class="specialize-logo">
-    <source srcset="images/Logo-Black.webp" type="image/webp">
-    <source srcset="images/Logo-Black.png" type="image/png">
-    <img src="images/Logo-Black.png" alt="Mira Creations logo used as decorative section divider" loading="lazy" aria-hidden="true">
+    <source srcset="/images/Logo-Black.webp" type="image/webp">
+    <source srcset="/images/Logo-Black.png" type="image/png">
+    <img src="/images/Logo-Black.png" alt="Mira Creations logo used as decorative section divider" loading="lazy" aria-hidden="true">
   </picture>
 
   <div class="specialize-line"></div>
@@ -298,9 +298,9 @@
   <div class="specialize-line"></div>
 
   <picture class="specialize-logo">
-    <source srcset="images/Logo-Black.webp" type="image/webp">
-    <source srcset="images/Logo-Black.png" type="image/png">
-    <img src="images/Logo-Black.png" alt="Mira Creations logo used as decorative section divider" loading="lazy" aria-hidden="true">
+    <source srcset="/images/Logo-Black.webp" type="image/webp">
+    <source srcset="/images/Logo-Black.png" type="image/png">
+    <img src="/images/Logo-Black.png" alt="Mira Creations logo used as decorative section divider" loading="lazy" aria-hidden="true">
   </picture>
 
   <div class="specialize-line"></div>
@@ -322,9 +322,9 @@
   <div class="specialize-line"></div>
 
   <picture class="specialize-logo">
-    <source srcset="images/Logo-Black.webp" type="image/webp">
-    <source srcset="images/Logo-Black.png" type="image/png">
-    <img src="images/Logo-Black.png" alt="Mira Creations logo used as decorative section divider" loading="lazy" aria-hidden="true">
+    <source srcset="/images/Logo-Black.webp" type="image/webp">
+    <source srcset="/images/Logo-Black.png" type="image/png">
+    <img src="/images/Logo-Black.png" alt="Mira Creations logo used as decorative section divider" loading="lazy" aria-hidden="true">
   </picture>
 
   <div class="specialize-line"></div>
@@ -385,9 +385,9 @@
   <div class="contact-arrow-wrapper" aria-hidden="true">
     <div class="contact-label-over-arrow">Contact Information</div>
    <picture class="contact-arrow-image" aria-hidden="true">
-  <source srcset="images/arrow.webp" type="image/webp">
-  <source srcset="images/arrow.png" type="image/png">
-  <img src="images/arrow.png" alt="Arrow pointing to contact tab" loading="lazy">
+  <source srcset="/images/arrow.webp" type="image/webp">
+  <source srcset="/images/arrow.png" type="image/png">
+  <img src="/images/arrow.png" alt="Arrow pointing to contact tab" loading="lazy">
 </picture>
   </div>
 
