--- a/ContactUs/index.html
+++ b/ContactUs/index.html
@@ -124,15 +124,15 @@
        <div class="logo-container header-logo-container">
 
   <picture class="purple-logo welcome-logo">
-    <source srcset="images/Logo-Purple.webp" type="image/webp">
-    <source srcset="images/Logo-Purple.png" type="image/png">
-    <img src="images/Logo-Purple.png" alt="Mira Creations logo - Event Decor and Jewellery in Edmonton" loading="lazy">
+    <source srcset="/images/Logo-Purple.webp" type="image/webp">
+    <source srcset="/images/Logo-Purple.png" type="image/png">
+    <img src="/images/Logo-Purple.png" alt="Mira Creations logo - Event Decor and Jewellery in Edmonton" loading="lazy">
   </picture>
 
   <picture class="black-logo welcome-logo" aria-hidden="true">
-    <source srcset="images/Logo-Black.webp" type="image/webp">
-    <source srcset="images/Logo-Black.png" type="image/png">
-    <img src="images/Logo-Black.png" alt="Mira Creations logo" loading="lazy">
+    <source srcset="/images/Logo-Black.webp" type="image/webp">
+    <source srcset="/images/Logo-Black.png" type="image/png">
+    <img src="/images/Logo-Black.png" alt="Mira Creations logo" loading="lazy">
   </picture>
     </div>
     
