--- a/ContactUs/index.html
+++ b/ContactUs/index.html
@@ -144,9 +144,9 @@
 
   <nav class="main-nav" role="navigation" aria-label="Main menu">
     <a href="/" title = "Mira Creations - event decor in Edmonton Homepage">Home</a>
-    <a href="AboutUs/" title = "Learn about Mira Creations and how we began event decor in Edmonton">About Us</a>
-    <a href="Gallery/" title="View Mira Creations Indian wedding decor and jewellery gallery in Edmonton">Gallery</a>
-    <a href="ContactUs/" title="Contact Mira Creations for your event decor needs in Edmonton">Contact Us</a>
+    <a href="/AboutUs/" title = "Learn about Mira Creations and how we began event decor in Edmonton">About Us</a>
+    <a href="/Gallery/" title="View Mira Creations Indian wedding decor and jewellery gallery in Edmonton">Gallery</a>
+    <a href="/ContactUs/" title="Contact Mira Creations for your event decor needs in Edmonton">Contact Us</a>
   </nav>
 
   <div class="header-right">
@@ -210,9 +210,9 @@
     
     <nav class="footer-links" aria-label="Footer navigation">
       <a href="/" title = "Mira Creations - event decor in Edmonton Homepage">Home</a>
-      <a href="AboutUs/" title = "Learn about Mira Creations and how we began event decor in Edmonton">About Us</a>
-      <a href="Gallery/" title="View Mira Creations Indian wedding decor and jewellery gallery in Edmonton">Gallery</a>
-      <a href="ContactUs/" title="Contact Mira Creations for your event decor needs in Edmonton">Contact Us</a>
+      <a href="/AboutUs/" title = "Learn about Mira Creations and how we began event decor in Edmonton">About Us</a>
+      <a href="/Gallery/" title="View Mira Creations Indian wedding decor and jewellery gallery in Edmonton">Gallery</a>
+      <a href="/ContactUs/" title="Contact Mira Creations for your event decor needs in Edmonton">Contact Us</a>
     </nav>
   </div>
 
@@ -226,9 +226,9 @@
 <div class="mobile-nav" id="mobileNav" role="navigation" aria-label="Mobile menu">
   <nav class="mobile-menu-links">
     <a href="/" title = "Mira Creations - event decor in Edmonton Homepage">Home</a>
-    <a href="AboutUs/" title = "Learn about Mira Creations and how we began event decor in Edmonton">About Us</a>
-    <a href="Gallery/" title="View Mira Creations Indian wedding decor and jewellery gallery in Edmonton">Gallery</a>
-    <a href="ContactUs/" title="Contact Mira Creations for your event decor needs in Edmonton">Contact Us</a>
+    <a href="/AboutUs/" title = "Learn about Mira Creations and how we began event decor in Edmonton">About Us</a>
+    <a href="/Gallery/" title="View Mira Creations Indian wedding decor and jewellery gallery in Edmonton">Gallery</a>
+    <a href="/ContactUs/" title="Contact Mira Creations for your event decor needs in Edmonton">Contact Us</a>
     <button class="mobile-quote-button" 
             onclick="window.location.href='ContactUs/'" 
             aria-label="Request a free quote from Mira Creations">
